--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -89,7 +89,7 @@ main div#box-delete-book {
   transform: translate(-50%, -50%);
   padding: 30px;
   box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.08), 0px 8px 8px -4px rgba(16, 24, 40, 0.03);
-  border-radius: 10px;
+  border-radius: 8px;
 }
 main div#box-delete-book p#txt-box-delete-book {
   font-size: 1.2rem;
@@ -127,7 +127,7 @@ main div#box-delete-book a#btn-cancel-delete-book {
   border: 2px solid #0868ae;
   color: #0868ae;
   padding: 10px 40px;
-  border-radius: 10px;
+  border-radius: 8px;
   font-weight: bold;
 }
 main div#box-delete-book a#btn-cancel-delete-book:hover {
@@ -143,7 +143,7 @@ main div#box-delete-book a#btn-confirmed-delete-book {
   background-color: #b53928;
   color: #fff;
   padding: 10px 40px;
-  border-radius: 10px;
+  border-radius: 8px;
   font-weight: bold;
 }
 main div#box-delete-book a#btn-confirmed-delete-book:hover {
@@ -326,7 +326,7 @@ div.container-dashboard-base .box-dashboard {
   height: -moz-fit-content;
   height: fit-content;
   background-color: #fff;
-  border-radius: 20px;
+  border-radius: 8px;
   padding: 20px;
   margin-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -347,7 +347,7 @@ div.container-dashboard-base .box-dashboard hr {
 }
 .container-home-tabs ul.list-book-box li.item-list-book:nth-child(odd) {
   background-color: #f0f7ff;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.format-pict-book {
   display: flex;
@@ -386,10 +386,10 @@ div.container-dashboard-base .box-dashboard hr {
   padding: 15px;
   font-weight: bold;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #0868ae;
   color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
   transition: background-color 0.3s ease;
 }
@@ -430,7 +430,7 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   width: 400px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
 }
@@ -460,7 +460,7 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   width: 400px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
 }
@@ -477,7 +477,7 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   width: 840px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
 }
@@ -494,7 +494,7 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   width: 400px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 20px;
@@ -506,12 +506,12 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
 section#dashboard-page-profil div#container-profil-tabs div#box-personal-info form#form-personal-info #group-btn-form button#btn-reset {
   width: 160px;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin-right: 20px;
   border: 1px solid #0868ae;
   color: #0868ae;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
   transition: background-color 0.3s ease;
 }
@@ -524,10 +524,10 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   width: 160px;
   height: 40px;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #0868ae;
   color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
   transition: background-color 0.3s ease;
 }
@@ -547,7 +547,7 @@ section#loan-register form#form-loan-register .input-form-add-book {
   width: 600px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -573,7 +573,7 @@ section#loan-register form#form-loan-register div#form-loan-register-right texta
   height: 600px;
   font-size: 20px;
   text-align: start;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -589,7 +589,7 @@ section#loan-register form#form-loan-register div#group-btn-loan-register-commun
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: transparent;
   border: 1px solid #0868ae;
   color: #0868ae;
@@ -605,7 +605,7 @@ section#loan-register form#form-loan-register div#group-btn-loan-register-commun
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
@@ -627,7 +627,7 @@ section#loan-register form#form-in-loan-register .input-form-add-book {
   width: 600px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -654,7 +654,7 @@ section#loan-register form#form-in-loan-register div#group-btn-in-loan-register-
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: transparent;
   border: 1px solid #0868ae;
   color: #0868ae;
@@ -670,7 +670,7 @@ section#loan-register form#form-in-loan-register div#group-btn-in-loan-register-
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
@@ -701,7 +701,7 @@ section#dashboard-page-book-crud div#confirmed-delete {
   width: 350px;
   height: 160px;
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 5000ms;
@@ -726,7 +726,7 @@ section#dashboard-page-book-crud div#confirmed-delete:hover {
 div#confirmed-error {
   width: 350px;
   height: 160px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 5000ms;
@@ -781,18 +781,19 @@ div#confirmed-error:hover {
   width: 400px;
   height: 40px;
   padding-left: 10px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin-left: auto;
   margin-right: 10px;
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input input#btn-search-book {
   width: 100px;
   height: 40px;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
   margin-right: 30px;
+  font-weight: bold;
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input input#btn-search-book:hover {
   cursor: pointer;
@@ -804,11 +805,12 @@ div#confirmed-error:hover {
   align-items: center;
   width: 140px;
   height: 40px;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
   margin-right: 20px;
+  font-weight: bold;
 }
 .container-crud-book-tabs div.search-add-crud-book a#btn-add-book:hover {
   cursor: pointer;
@@ -831,7 +833,7 @@ div#confirmed-error:hover {
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud:nth-child(odd) {
   background-color: #f0f7ff;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud {
   position: relative;
@@ -845,6 +847,7 @@ div#confirmed-error:hover {
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
   width: 150px;
   text-align: center;
+  padding-right: 50px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud {
   height: 100px;
@@ -856,6 +859,7 @@ div#confirmed-error:hover {
   cursor: zoom-in;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.item-title-crud {
+  position: relative;
   color: #0868ae;
   font-size: 18px;
   font-weight: bold;
@@ -863,17 +867,25 @@ div#confirmed-error:hover {
   width: 400px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
-  position: relative;
+  position: absolute;
+  right: 0px;
+  top: -10px;
   font-size: 30px;
-  padding: 15px;
+  padding: 2px 8px;
+  background-color: #ff5e38;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 8px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud:hover {
   cursor: pointer;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud {
-  position: relative;
-  width: 0;
-  height: 0;
+  position: absolute;
+  top: 0;
+  right: -60px;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud {
   position: absolute;
@@ -885,7 +897,7 @@ div#confirmed-error:hover {
   padding: 16px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 5px;
+  border-radius: 8px;
   z-index: 999;
   margin-bottom: 50px;
   text-align: start;
@@ -960,8 +972,9 @@ div#confirmed-error:hover {
   flex-wrap: wrap;
   flex-direction: column;
   font-size: 16px;
-  padding: 6px 0;
   color: gray;
+  padding: 6px 20px;
+  border-radius: 8px;
 }
 @media screen and (min-width: 950px) {
   .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
@@ -1007,7 +1020,7 @@ section#dashboard-page-book-add form#form-add-book .input-form-add-book {
   width: 600px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -1034,7 +1047,7 @@ section#dashboard-page-book-add form#form-add-book div#form-add-book-right texta
   height: 600px;
   font-size: 20px;
   text-align: start;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -1050,7 +1063,7 @@ section#dashboard-page-book-add form#form-add-book div#group-btn-form-add-commun
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: transparent;
   border: 1px solid #0868ae;
   color: #0868ae;
@@ -1066,7 +1079,7 @@ section#dashboard-page-book-add form#form-add-book div#group-btn-form-add-commun
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
@@ -1080,7 +1093,7 @@ section#dashboard-page-book-add form#form-add-book div#group-btn-form-add-commun
 section#dashboard-page-book-add #confirmed-added {
   width: 350px;
   height: 160px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 8000ms;
@@ -1117,7 +1130,7 @@ section#dashboard-page-book-add #not-added {
   position: relative;
   width: 350px;
   height: 80px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 8000ms;
@@ -1169,7 +1182,7 @@ section#dashboard-page-book-edit form#form-book-edit .input-form-add-book {
   width: 600px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -1178,7 +1191,7 @@ section#dashboard-page-book-edit form#form-book-edit .select-form-add-book {
   width: 600px;
   height: 44px;
   font-size: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -1208,7 +1221,7 @@ section#dashboard-page-book-edit form#form-book-edit div#form-book-edit-right te
   height: 600px;
   font-size: 20px;
   text-align: start;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-left: 10px;
   border: 1px solid gray;
   margin-bottom: 30px;
@@ -1224,7 +1237,7 @@ section#dashboard-page-book-edit form#form-book-edit div#group-btn-form-edit-com
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: transparent;
   border: 1px solid #0868ae;
   color: #0868ae;
@@ -1240,7 +1253,7 @@ section#dashboard-page-book-edit form#form-book-edit div#group-btn-form-edit-com
   width: 160px;
   height: 40px;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
@@ -1255,7 +1268,7 @@ section#dashboard-page-book-edit #confirmed-modified {
   position: relative;
   width: 350px;
   height: 160px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 8000ms;
@@ -1292,7 +1305,7 @@ section#dashboard-page-book-edit #not-modified {
   position: relative;
   width: 350px;
   height: 80px;
-  border-radius: 10px;
+  border-radius: 8px;
   position: fixed;
   text-align: center;
   animation: slide-in 8000ms;
