--- a/css/style.scss
+++ b/css/style.scss
@@ -342,8 +342,8 @@ p.sub-title-section {
             position: absolute;
             top: 42px;
             right: 50px;
-            width: 180px;
-            height: 150px;
+            width: 220px;
+            height: 160px;
             background-color: $white;
             border-radius: 8px;
             padding: 10px 20px;
@@ -351,30 +351,30 @@ p.sub-title-section {
 
             ul {
               li {
+                margin-top: 3px;
                 &:first-of-type {
                   font-size: 18px;
                   color: $main-blue;
-                  margin-bottom: 3px;
                 }
   
                 &:last-of-type {
                   position: absolute;
                   bottom: -2px;
                   left: 0;
-                  width: 180px;
+                  width: 220px;
                   background-color: $footer;
                   padding: 6px;
                   border-radius: 0 0 8px 8px;
                 }
   
                 &:last-of-type a {
-                  font-size: 14px;
+                  font-size: 16px;
                   color: $white;
                   float: right;
                 }
   
                 a {
-                  font-size: 14px;
+                  font-size: 16px;
                   &:hover {
                     text-decoration: underline;
                   }
