fin de la v1 register loan

--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -536,6 +536,214 @@ section#dashboard-page-profil div#container-profil-tabs div#box-personal-info fo
   cursor: pointer;
 }
 
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud {
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud:nth-child(odd) {
+  background-color: #f0f7ff;
+  border-radius: 8px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  min-height: 120px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
+  width: 150px;
+  text-align: center;
+  padding-right: 50px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud {
+  height: 100px;
+  width: auto;
+  padding-left: 20px;
+  z-index: -1;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud:hover {
+  cursor: zoom-in;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.item-title-crud {
+  position: relative;
+  color: #0868ae;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Nova Slim", cursive, sans-serif;
+  width: 400px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
+  position: absolute;
+  right: 0px;
+  top: -10px;
+  font-size: 30px;
+  padding: 2px 8px;
+  background-color: #ff5e38;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 8px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud:hover {
+  cursor: pointer;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud {
+  position: absolute;
+  top: 0;
+  right: -60px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud {
+  position: absolute;
+  right: 120px;
+  top: 0;
+  width: 220px;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 16px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 8px;
+  z-index: 999;
+  margin-bottom: 50px;
+  text-align: start;
+  display: block;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud button.btn-detail-option-box {
+  border: none;
+  background-color: transparent;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud button.btn-detail-option-box:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud button.btn-close-option-box {
+  position: absolute;
+  top: 0;
+  right: 12px;
+  font-size: 18px;
+  padding: 6px;
+  border: none;
+  background-color: transparent;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud button.btn-close-option-box:hover {
+  cursor: pointer;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud.active {
+  display: block;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud h4 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #ff5e38;
+  margin-bottom: 2px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud ul.list-option-crud li {
+  text-align: start;
+  font-size: 14px;
+  padding: 3px;
+  width: 100%;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud ul.list-option-crud li:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book {
+  display: none;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book.active {
+  display: block;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud h3 {
+  margin-bottom: 15px;
+  color: #0868ae;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left {
+  width: 40%;
+  color: #0868ae;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  font-size: 16px;
+  color: gray;
+  padding: 6px 20px;
+  border-radius: 8px;
+}
+@media screen and (min-width: 950px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li:nth-child(odd) {
+    background-color: #fafafa; /* couleur pour les éléments impairs */
+  }
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li:nth-child(even) {
+    background-color: #f0f7ff; /* couleur pour les éléments impairs */
+  }
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li span.bdd-var {
+  font-size: 16px;
+  color: #0868ae;
+}
+@media screen and (min-width: 950px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud div.item-complete-left ul.all-info-user li span.bdd-var {
+    font-size: 18px;
+  }
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right {
+  width: 40%;
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  font-size: 16px;
+  color: gray;
+  padding: 6px 20px;
+  border-radius: 8px;
+}
+@media screen and (min-width: 950px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(odd) {
+    background-color: #fafafa; /* couleur pour les éléments impairs */
+  }
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(even) {
+    background-color: #f0f7ff; /* couleur pour les éléments impairs */
+  }
+}
+section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
+  font-size: 16px;
+  color: #0868ae;
+}
+@media screen and (min-width: 950px) {
+  section#loan-register div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
+    font-size: 18px;
+  }
+}
 section#loan-register form#form-loan-register .label-form-add-book {
   display: block;
   font-size: 18px;
@@ -777,7 +985,7 @@ div#confirmed-error:hover {
   width: fit-content;
   margin-right: auto;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input#input-seach-book {
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.input-search {
   width: 400px;
   height: 40px;
   padding-left: 10px;
@@ -785,7 +993,7 @@ div#confirmed-error:hover {
   margin-left: auto;
   margin-right: 10px;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input#btn-search-book {
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.btn-search {
   width: 100px;
   height: 40px;
   border-radius: 8px;
@@ -795,11 +1003,11 @@ div#confirmed-error:hover {
   margin-right: 30px;
   font-weight: bold;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input#btn-search-book:hover {
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.btn-search:hover {
   cursor: pointer;
   background-color: #05497b;
 }
-.container-crud-book-tabs div.search-add-crud-book a#btn-add-book {
+.container-crud-book-tabs div.search-add-crud-book a.btn-add {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -812,7 +1020,7 @@ div#confirmed-error:hover {
   margin-right: 20px;
   font-weight: bold;
 }
-.container-crud-book-tabs div.search-add-crud-book a#btn-add-book:hover {
+.container-crud-book-tabs div.search-add-crud-book a.btn-add:hover {
   cursor: pointer;
   background-color: #05497b;
 }
@@ -943,6 +1151,7 @@ div#confirmed-error:hover {
   cursor: pointer;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book {
+  width: 100%;
   display: none;
 }
 .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book.active {
