--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1791,3 +1791,14 @@ section#dashboard-page-book-edit {
     }
   }
 }
+
+
+
+// ----------  SECTION lOAN BOOK REGISTER ----------
+
+// section#crud-user {
+
+//   div#box-crud-user {
+
+//   }
+// }
